--- a/YouTubeDraggableVideoSwift/YouTubeDraggableVideoSwift/Base.lproj/Main.storyboard
+++ b/YouTubeDraggableVideoSwift/YouTubeDraggableVideoSwift/Base.lproj/Main.storyboard
@@ -89,19 +89,102 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ta6-or-YAs">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="250"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vih-Fl-wCp">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="Lrf-vl-sZA"/>
+                                            <constraint firstAttribute="width" constant="50" id="lUs-2W-psy"/>
+                                        </constraints>
+                                        <state key="normal" image="DownArrow"/>
+                                        <connections>
+                                            <action selector="btnDownTapAction:" destination="PyO-D0-N6a" eventType="touchUpInside" id="rtp-mO-hHC"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
                                 <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <constraints>
+                                    <constraint firstItem="Vih-Fl-wCp" firstAttribute="leading" secondItem="Ta6-or-YAs" secondAttribute="leading" id="ZjI-K1-5aK"/>
                                     <constraint firstAttribute="height" constant="250" id="tBv-zD-HJh"/>
+                                    <constraint firstItem="Vih-Fl-wCp" firstAttribute="top" secondItem="Ta6-or-YAs" secondAttribute="top" id="zSl-cD-N1p"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gBt-ex-srD">
+                                <rect key="frame" x="0.0" y="250" width="600" height="350"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4rl-YP-lal">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="45"/>
+                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="45" id="pq6-tV-3tv"/>
+                                        </constraints>
+                                    </view>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4Ho-Lv-Sb9">
+                                        <rect key="frame" x="0.0" y="45" width="600" height="305"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <prototypes>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="detailCell" rowHeight="100" id="8Qy-UD-7bz">
+                                                <rect key="frame" x="0.0" y="28" width="600" height="100"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8Qy-UD-7bz" id="iYU-Vi-H9m">
+                                                    <rect key="frame" x="0.0" y="0.0" width="600" height="99.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RHK-EG-kt7">
+                                                            <rect key="frame" x="18" y="16" width="80" height="67"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="80" id="9hD-wj-paY"/>
+                                                                <constraint firstAttribute="height" constant="67" id="LOq-sM-h69"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="马云 ，永远不要抱怨" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D95-Rr-KXa">
+                                                            <rect key="frame" x="114" y="28" width="462" height="21"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="RHK-EG-kt7" firstAttribute="centerY" secondItem="iYU-Vi-H9m" secondAttribute="centerY" id="J4x-D9-G6W"/>
+                                                        <constraint firstAttribute="trailingMargin" secondItem="D95-Rr-KXa" secondAttribute="trailing" constant="16" id="OXv-Ip-csN"/>
+                                                        <constraint firstItem="D95-Rr-KXa" firstAttribute="leading" secondItem="RHK-EG-kt7" secondAttribute="trailing" constant="16" id="YT3-dM-jG8"/>
+                                                        <constraint firstItem="D95-Rr-KXa" firstAttribute="top" secondItem="iYU-Vi-H9m" secondAttribute="topMargin" constant="20" id="bVQ-Qv-zN6"/>
+                                                        <constraint firstItem="RHK-EG-kt7" firstAttribute="leading" secondItem="iYU-Vi-H9m" secondAttribute="leading" constant="18" id="zpu-Ih-HlK"/>
+                                                    </constraints>
+                                                </tableViewCellContentView>
+                                            </tableViewCell>
+                                        </prototypes>
+                                    </tableView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="4Ho-Lv-Sb9" firstAttribute="leading" secondItem="gBt-ex-srD" secondAttribute="leading" id="AmS-jb-isf"/>
+                                    <constraint firstAttribute="bottom" secondItem="4Ho-Lv-Sb9" secondAttribute="bottom" id="Xng-Zh-MME"/>
+                                    <constraint firstItem="4rl-YP-lal" firstAttribute="leading" secondItem="gBt-ex-srD" secondAttribute="leading" id="gu7-qC-dtJ"/>
+                                    <constraint firstItem="4Ho-Lv-Sb9" firstAttribute="top" secondItem="4rl-YP-lal" secondAttribute="bottom" id="rhs-Tm-Va4"/>
+                                    <constraint firstAttribute="trailing" secondItem="4Ho-Lv-Sb9" secondAttribute="trailing" id="vXi-je-fhh"/>
+                                    <constraint firstAttribute="trailing" secondItem="4rl-YP-lal" secondAttribute="trailing" id="xiS-BX-qld"/>
+                                    <constraint firstItem="4rl-YP-lal" firstAttribute="top" secondItem="gBt-ex-srD" secondAttribute="top" id="yf1-om-Uxq"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="gBt-ex-srD" secondAttribute="trailing" id="KTI-99-g0w"/>
                             <constraint firstAttribute="trailing" secondItem="Ta6-or-YAs" secondAttribute="trailing" id="QAb-5t-Kd4"/>
                             <constraint firstItem="Ta6-or-YAs" firstAttribute="leading" secondItem="ZUM-1u-85x" secondAttribute="leading" id="dKu-TH-RfI"/>
+                            <constraint firstItem="r3o-9n-99P" firstAttribute="top" secondItem="gBt-ex-srD" secondAttribute="bottom" id="oF8-1y-7XN"/>
                             <constraint firstItem="Ta6-or-YAs" firstAttribute="top" secondItem="ZUM-1u-85x" secondAttribute="top" id="qPJ-Hs-O68"/>
+                            <constraint firstItem="gBt-ex-srD" firstAttribute="leading" secondItem="ZUM-1u-85x" secondAttribute="leading" id="v39-Pk-FZE"/>
+                            <constraint firstItem="gBt-ex-srD" firstAttribute="top" secondItem="Ta6-or-YAs" secondAttribute="bottom" id="yGq-hs-U7K"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="btnDown" destination="Vih-Fl-wCp" id="RLs-ZI-bRx"/>
+                        <outlet property="tableView" destination="4Ho-Lv-Sb9" id="uJb-7j-Ajb"/>
+                        <outlet property="viewTable" destination="gBt-ex-srD" id="0vK-8a-J3w"/>
+                        <outlet property="viewYouTube" destination="Ta6-or-YAs" id="VCk-gB-b8B"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="c6i-SK-ysK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -125,6 +208,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="DownArrow" width="17" height="17"/>
         <image name="profilePhoto.png" width="100" height="100"/>
     </resources>
 </document>
